[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/player_ui.gd" type="Script" id=1]

[node name="PlayerUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_bottom = -2.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hbox" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox_stats" type="VBoxContainer" parent="hbox"]
margin_right = 1046.0
margin_bottom = 640.0
size_flags_horizontal = 3
alignment = 2

[node name="hbox" type="HBoxContainer" parent="hbox/vbox_stats"]
margin_top = 485.0
margin_right = 1046.0
margin_bottom = 640.0

[node name="vbox" type="VBoxContainer" parent="hbox/vbox_stats/hbox"]
margin_right = 158.0
margin_bottom = 155.0
alignment = 1

[node name="lbl_pawn_stats" type="Label" parent="hbox/vbox_stats/hbox/vbox"]
margin_top = 17.0
margin_right = 158.0
margin_bottom = 48.0
text = "PAWN STATS
"
uppercase = true

[node name="hbox_name" type="HBoxContainer" parent="hbox/vbox_stats/hbox/vbox"]
margin_top = 52.0
margin_right = 158.0
margin_bottom = 66.0

[node name="lbl_name" type="Label" parent="hbox/vbox_stats/hbox/vbox/hbox_name"]
margin_right = 46.0
margin_bottom = 14.0
text = "name: "
uppercase = true

[node name="lbl_name_value" type="Label" parent="hbox/vbox_stats/hbox/vbox/hbox_name"]
margin_left = 50.0
margin_right = 116.0
margin_bottom = 14.0
text = "Jhon Doe"
uppercase = true

[node name="hbox_health" type="HBoxContainer" parent="hbox/vbox_stats/hbox/vbox"]
margin_top = 70.0
margin_right = 158.0
margin_bottom = 84.0

[node name="lbl_health" type="Label" parent="hbox/vbox_stats/hbox/vbox/hbox_health"]
margin_right = 58.0
margin_bottom = 14.0
text = "Health: "
uppercase = true

[node name="lbl_curr_health_value" type="Label" parent="hbox/vbox_stats/hbox/vbox/hbox_health"]
margin_left = 62.0
margin_right = 86.0
margin_bottom = 14.0
text = "150"
uppercase = true

[node name="lbl_health_div" type="Label" parent="hbox/vbox_stats/hbox/vbox/hbox_health"]
margin_left = 90.0
margin_right = 95.0
margin_bottom = 14.0
text = "/"
uppercase = true

[node name="lbl_max_health_value" type="Label" parent="hbox/vbox_stats/hbox/vbox/hbox_health"]
margin_left = 99.0
margin_right = 123.0
margin_bottom = 14.0
text = "150"
uppercase = true

[node name="hbox_attack" type="HBoxContainer" parent="hbox/vbox_stats/hbox/vbox"]
margin_top = 88.0
margin_right = 158.0
margin_bottom = 102.0

[node name="lbl_attack" type="Label" parent="hbox/vbox_stats/hbox/vbox/hbox_attack"]
margin_right = 107.0
margin_bottom = 14.0
text = "Attack power: "
uppercase = true

[node name="lbl_attack_value" type="Label" parent="hbox/vbox_stats/hbox/vbox/hbox_attack"]
margin_left = 111.0
margin_right = 127.0
margin_bottom = 14.0
text = "30"
uppercase = true

[node name="hbox_walk" type="HBoxContainer" parent="hbox/vbox_stats/hbox/vbox"]
margin_top = 106.0
margin_right = 158.0
margin_bottom = 120.0

[node name="lbl_walk" type="Label" parent="hbox/vbox_stats/hbox/vbox/hbox_walk"]
margin_right = 146.0
margin_bottom = 14.0
text = "Movement radious: "
uppercase = true

[node name="lbl_walk_value" type="Label" parent="hbox/vbox_stats/hbox/vbox/hbox_walk"]
margin_left = 150.0
margin_right = 158.0
margin_bottom = 14.0
text = "5"
uppercase = true

[node name="hbox_attack_r" type="HBoxContainer" parent="hbox/vbox_stats/hbox/vbox"]
margin_top = 124.0
margin_right = 158.0
margin_bottom = 138.0

[node name="lbl_attack_r" type="Label" parent="hbox/vbox_stats/hbox/vbox/hbox_attack_r"]
margin_right = 116.0
margin_bottom = 14.0
text = "Attack radious:"
uppercase = true

[node name="lbl_attack_r_value" type="Label" parent="hbox/vbox_stats/hbox/vbox/hbox_attack_r"]
margin_left = 120.0
margin_right = 128.0
margin_bottom = 14.0
text = "1"
uppercase = true

[node name="spacer" type="Panel" parent="hbox/vbox_stats/hbox"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 162.0
margin_right = 1046.0
margin_bottom = 155.0
rect_min_size = Vector2( 0, 155 )
size_flags_horizontal = 3

[node name="vbox" type="VBoxContainer" parent="hbox"]
margin_left = 1050.0
margin_right = 1200.0
margin_bottom = 640.0
alignment = 2

[node name="lbl_name" type="Label" parent="hbox/vbox"]
margin_top = 460.0
margin_right = 150.0
margin_bottom = 480.0
rect_min_size = Vector2( 0, 20 )
text = "TACTICS MENU"
align = 1
uppercase = true

[node name="buttons" type="VBoxContainer" parent="hbox/vbox"]
margin_top = 484.0
margin_right = 150.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_move" type="Button" parent="hbox/vbox/buttons"]
margin_right = 150.0
margin_bottom = 28.0
rect_min_size = Vector2( 150, 28 )
disabled = true
text = "Move"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_attack" type="Button" parent="hbox/vbox/buttons"]
margin_top = 32.0
margin_right = 150.0
margin_bottom = 60.0
rect_min_size = Vector2( 150, 28 )
disabled = true
text = "Attack"

[node name="btn_items" type="Button" parent="hbox/vbox/buttons"]
margin_top = 64.0
margin_right = 150.0
margin_bottom = 92.0
rect_min_size = Vector2( 150, 28 )
disabled = true
text = "Items"

[node name="btn_wait" type="Button" parent="hbox/vbox/buttons"]
margin_top = 96.0
margin_right = 150.0
margin_bottom = 124.0
rect_min_size = Vector2( 150, 28 )
disabled = true
text = "Wait"

[node name="btn_cancel" type="Button" parent="hbox/vbox/buttons"]
margin_top = 128.0
margin_right = 150.0
margin_bottom = 156.0
rect_min_size = Vector2( 150, 28 )
disabled = true
text = "Cancel"
